Fixed margin in card to avoid overflow

--- a/src/app/characters/characters.component.css
+++ b/src/app/characters/characters.component.css
@@ -42,7 +42,7 @@ mat-card img{
 }
 
 mat-card-content {
-	margin: 1.5rem;
+	margin: 1rem;
 }
 
 mat-grid-tile{
